# python-prompt-manager

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml
examples/: .env.example  basic_usage.py  simple_config.py
examples/prompts/: greeting.txt
src/prompt_manager/: __init__.py
src/prompt_manager/core/: config.py  exceptions.py  manager.py  registry.py
src/prompt_manager/integrations/django/: apps.py  checks.py
src/prompt_manager/sources/: base.py  local.py  openai.py
tests/: test_config.py  test_manager_dict.py
